# discord-ext-pager

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml  pyright-lint.yml  python-publish.yml
src/discord/ext/pager/: __init__.py
